templates/route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app.kubernetes.io/managed-by: EventListener
    app.kubernetes.io/part-of: Triggers
    eventlistener: simple
  name: el-simple
spec:
  host: el-simple-ci-openshift-pipelines.apps.chmouel.devcluster.openshift.com
  port:
    targetPort: http-listener
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: el-simple
    weight: 100
  wildcardPolicy: None
